<resources>
    <string name="app_name">SOFTVapp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Tecnico AGS</string>
    <string name="nav_header_subtitle">Softv</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_orden">Orden</string>
    <string name="title_activity_reportes">Reportes</string>
    <string name="title_activity_configuracion">Configuracion</string>
    <string name="VentanaMedios">res/layout/alertdialogmedios</string>
    <string name="aparatos_Asignados">Aparatos asignados</string>
    <string name="eliminar">Eliminar</string>
    <string name="medio">Medio</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="asigar_Aparatos">Asignar aparatos</string>
    <string name="asignacion_Aparatos">Asignación de aparatos</string>
    <string name="tipo_de_AparatoDos">Tipo de Aparato:</string>
    <string name="aparatoDos">Aparato:</string>
    <string name="servicios_a_los_que">Servicios a los que se le instala el aparato:</string>
    <string name="agregar">Agregar</string>
    <string name="selecciona_Aparato">Selecciona el aparato</string>
    <string name="aparato_Cambiar">Aparato a cambiar</string>
    <string name="estado_Aparato">Estado del aparato:</string>
    <string name="aparato_a_Asignar">Aparato a asignar</string>
    <string name="cambio_Domicilio">Cambio de domicilio</string>
    <string name="ciudadDos">Ciudad:</string>
    <string name="localidadDos">Localidad:</string>
    <string name="coloniaDos">Colonia:</string>
    <string name="calleDos">Calle:</string>
    <string name="numeroDos">Número:</string>
    <string name="numeroIDos">Número interior:</string>
    <string name="telefonoDos">Teléfono:</string>
    <string name="calle_Norte">Calle Norte</string>
    <string name="calle_Sur">Calle Sur</string>
    <string name="calle_Este">Calle Este</string>
    <string name="calle_Oeste">Calle Oeste</string>
    <string name="extensiones_Adicionales">Extensiones adicionales</string>
    <string name="numero_de_Extensiones">Número de extensiones por instalar</string>
    <string name="visita">Visita</string>
    <string name="ejecutada">Ejecutada</string>
    <string name="ejecucion">Ejecución</string>
    <string name="visita1">Visita 1</string>
    <string name="visita2">Visita 2</string>
    <string name="horai">Hora inicio</string>
    <string name="horaf">Hora fin</string>
    <string name="tecnico_Sec">Tecnico Secundario</string>
    <string name="observacionesDos">Observaciones:</string>
    <string name="espere3">Espere...</string>
    <string name="usuario">Usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="entrar">Entrar</string>
    <string name="tecnicoDos">Técnico:</string>
    <string name="datos_Cliente">Datos Cliente</string>
    <string name="contratoDos">Contrato:</string>
    <string name="info_Usuario">Información del usuario</string>
    <string name="informacion">Información</string>
    <string name="nombreDos">Nombre:</string>
    <string name="direccionDos">Dirección:</string>
    <string name="servicios_Asignados">Servicios asignados</string>
    <string name="estatusDos">Estatus:</string>
    <string name="empresaDos">Empresa:</string>
    <string name="cerrar_S">Cerrar sesion</string>
    <string name="proximo_TrabajoDos">Próximo trabajo:</string>
    <string name="orden">Orden</string>
    <string name="n_Contrato">No. de Contrato</string>

    <string name="n_Orden"># de Orden</string>
    <string name="estatus">Estatus</string>
    <string name="reporte">Reporte</string>
    <string name="n_Reporte"># de Reporte</string>
    <string name="ejecutar">Ejecutar</string>
    <string name="estatus_Comando">Estatus comando</string>
    <string name="resultadoDos">Resultado:</string>
    <string name="reiniciar">Reiniciar</string>
    <string name="salir">Salir</string>
    <string name="visita3">Visita 3</string>
    <string name="n_Bitacora">No. Bitácora</string>
    <string name="descripcion_Articulo">Descripción del artículo</string>
    <string name="clasificaion_Materiales">Clasificación de material</string>
    <string name="descripcion">Descripción</string>
    <string name="accion">Acción</string>
    <string name="recibi">Recibí</string>
    <string name="clasificacion_Problema">Clasificación del problema</string>
    <string name="prioridad">Prioridad</string>
    <string name="reporte_Cliente">Reporte del cliente</string>
    <string name="observaciones">Observaciones</string>
    <string name="tipo_Solucion">Tipo de solución</string>
    <string name="problema_Real">Problema real</string>
    <string name="Regresar">Regresar</string>
    <string name="seleccionExt">Selecciona la extensión:</string>
    <string name="clasificacionMate">Clasificación de material:</string>
    <string name="descripArticu">Descripción del artículo:</string>
    <string name="cantidad">Cantidad:</string>
    <string name="exterior">Exterior</string>
    <string name="interior">Interior</string>
    <string name="fin">Fin</string>

    <string name="login">Login</string>

    <string name="contrasenia">Contraseña</string>
    <string name="btnlogin">Entrar</string>
    <string name="recordar">Recordar</string>

    <string name="ordenes">Ordenes</string>
    <string name="reportes">Reportes</string>
    <string name="configuracion">Configuración</string>
    <string name="cerrarSesion">Cerrar sesión</string>
    <string name="proximo_Trabajo">Próximo trabajo</string>
    <string name="direccion">Dirección</string>

    <string name="nContrato"># de contrato</string>
    <string name="btn_CAparato">Cambio aparato</string>
    <string name="btn_CDomicilio">Cambio domicilio</string>
    <string name="tab_Horas">Horas</string>
    <string name="tab_Trabajo">Trabajo</string>
    <string name="tab_Material">Material</string>
    <string name="tab_Ejecutar">Finalizar</string>
    <string name="pendiente">Pendiente</string>
    <string name="primerVisita">Visita 1</string>
    <string name="segundaVisita">Visita 2</string>
    <string name="horaInicio">Hora inicio</string>
    <string name="horaFin">Hora fin</string>
    <string name="formatoFecha">dd/MM/AAAA</string>
    <string name="formatoHora">hh:mm</string>
    <string name="tecnicoSecundario">Técnico secundario</string>
    <string name="coordenadas">Coordenadas</string>
    <string name="latitud">Latitud</string>
    <string name="longitud">Longitud</string>
    <string name="btn_ejecutar">Ejecutar</string>
    <string name="statusComando">Estatus comando</string>
    <string name="espera">Espera</string>
    <string name="resultado">Resultado</string>
    <string name="tipoDeTrabajo">Tipo de trabajo:</string>
    <string name="hora">Hora:</string>
    <string name="calle">Calle:</string>
    <string name="numero">Número:</string>
    <string name="colonia">Colonia:</string>
    <string name="nombre">Nombre:</string>
    <string name="compania">Compañia</string>
    <string name="domicilio">Domicilio</string>
    <string name="tv_Nombre">Nombre</string>
    <string name="ciudad">Ciudad</string>
    <string name="servAsignados">Servicios asignados</string>
    <string name="fechaformato">dd/MM/AAAA</string>
    <string name="inicio">Inicio</string>
    <string name="firmar">Firmar</string>
    <string name="contrato">Contrato</string>
    <string name="MACWAM">MACWAM</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
