<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/extensiones_Adicionales"
        android:textSize="30dp"
        android:layout_centerHorizontal="true"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="23dp"
        android:layout_marginTop="-50dp"
        android:text="@string/numero_de_Extensiones"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_alignTop="@id/txtExtencion"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="-"
        android:textSize="23dp"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:id="@+id/txtExtencion"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aceptar"
        android:layout_alignParentBottom="true"
        android:id="@+id/extencionAceptar"
        />
</RelativeLayout>