<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.EjecutarFragment">
  <RelativeLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="80dp">

      <Button
          android:id="@+id/ejec"
          android:layout_width="101dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="150dp"
          android:backgroundTint="#2196F3"
          android:textColor="#000"
          android:background="@drawable/boton"
          android:text="@string/ejecutar" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ejecutarLay"
        android:visibility="gone"
        >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="44dp"
        android:layout_marginTop="70dp"
        android:text="@string/estatus_Comando"
        android:textSize="20dp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="210dp"
        android:layout_marginTop="70dp"
        android:hint="Espera"
        android:textSize="20dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="125dp"
        android:layout_marginTop="120dp"
        android:text="@string/resultadoDos"
        android:textSize="20dp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/msgEjecutarOrd"
        android:layout_width="247dp"
        android:layout_height="122dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="82dp"
        android:background="#2598" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/animado2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp">

      <Button
          android:id="@+id/restart"
          android:layout_width="118dp"
          android:layout_height="wrap_content"
          android:layout_alignParentStart="true"
          android:layout_alignParentTop="true"
          android:layout_gravity="center"
          android:layout_marginStart="55dp"
          android:layout_marginTop="296dp"
          android:background="@drawable/boton"
          android:backgroundTint="#2196F3"
          android:enabled="false"
          android:text="@string/reiniciar"
          android:textColor="#000" />

      <Button
          android:id="@+id/salirEjecutarOrd"
          android:layout_width="118dp"
          android:layout_height="wrap_content"
          android:layout_alignParentTop="true"
          android:layout_gravity="center"
          android:layout_marginStart="32dp"
          android:layout_marginTop="295dp"
          android:layout_toEndOf="@+id/restart"
          android:background="@drawable/boton"
          android:backgroundTint="#2196F3"
          android:enabled="false"
          android:text="@string/salir"
          android:textColor="#000" />
    </RelativeLayout>

  </RelativeLayout>
</FrameLayout>