<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_alignParentTop="true"
    android:layout_marginTop="70dp"
    tools:context=".Fragments.Trabajos">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="183dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:text="@string/descripcion"
        android:textSize="18dp"
        android:textStyle="bold" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="230dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_marginTop="100dp"
        android:paddingBottom="10dp"
        android:text="@string/accion"
        android:textSize="18dp"
        android:textStyle="bold" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="320dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="1dp"
        android:text="@string/recibi"
        android:textSize="18dp"
        android:textStyle="bold" />
    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="150dp"
        android:id="@+id/listTrabajos">
    </ListView>
</FrameLayout>