<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:verticalScrollbarPosition="defaultPosition"
        android:visibility="visible">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:text="@string/asignacion_Aparatos"
                android:textSize="25dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/escanear"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="35dp"
                android:background="@android:drawable/ic_search_category_default"
                android:gravity="center_vertical"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/codigo"
                android:layout_width="230dp"
                android:layout_height="35dp"
                android:layout_marginStart="110dp"
                android:layout_marginLeft="110dp"
                android:layout_marginTop="45dp"
                android:background="@drawable/contorno"
                android:visibility="invisible" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="90dp"
                android:text="@string/tipo_de_AparatoDos"
                android:textSize="20dp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/tipo_aparato"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="120dp"
                android:background="@drawable/contorno" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="180dp"
                android:text="@string/aparatoDos"
                android:textSize="20dp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/aparatoDisponible"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="210dp"
                android:background="@drawable/contorno" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="260dp"
                android:text="@string/servicios_a_los_que"
                android:textSize="18dp"
                android:textStyle="bold" />

            <RelativeLayout
                android:id="@+id/sss"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="300dp">

                <ListView
                    android:id="@+id/Servicios123"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"></ListView>
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/agregar"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:id="@+id/agregar"
        android:backgroundTint="@color/colorPrimary"
        />
</RelativeLayout>