<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.TrabajosFragment">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_marginTop="80dp">
        android:verticalScrollbarPosition="defaultPosition"
        android:visibility="visible">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <TextView
                android:id="@+id/uno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="0dp"
                android:text="@string/clasificacion_Problema"
                android:textColor="#000"
                android:textSize="20dp" />

        <TextView
            android:id="@+id/tv_Prioridad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/prioridad"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Sp1" />

        <TextView
            android:id="@+id/Sp2"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/disenio_spinner"
            android:gravity="center"
            android:textColor="#000"
            android:textSize="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_Prioridad" />

        <TextView
            android:id="@+id/tv_RepCliente"
            android:layout_width="wrap_content"
            android:layout_height="29dp"
            android:layout_marginTop="24dp"
            android:text="@string/reporte_Cliente"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.072"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Sp2" />

        <TextView
            android:id="@+id/report"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"

            android:text="---"
            android:textColor="#000"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_RepCliente" />

        <TextView
            android:id="@+id/tv_TxtObs"
            android:layout_width="wrap_content"
            android:layout_height="29dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/observaciones"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/report" />

        <TextView
            android:id="@+id/observa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"

            android:text="---"
            android:textColor="#000"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_TxtObs" />

        <TextView
            android:id="@+id/tv_TxtTipoSol"
            android:layout_width="wrap_content"
            android:layout_height="29dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/tipo_Solucion"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/observa" />

        <Spinner
            android:id="@+id/tiposol"
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/disenio_spinner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_TxtTipoSol" />

        <TextView
            android:id="@+id/tiposol1"
            android:layout_width="wrap_content"
            android:layout_height="29dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/problema_Real"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tiposol" />

        <EditText
            android:id="@+id/problema"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/contorno"
            android:inputType="textAutoCorrect|text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tiposol1" />




    </android.support.constraint.ConstraintLayout>

</ScrollView>

